# SleepController

./: .gitignore  DESIGN.md  README.md  health-20260714-011359.json  health-20260714-021112.json  health-20260714-021439.json  health-20260714-022442.json  health-20260714-023453.json  health-20260714-024503.json  health-20260714-025513.json  health-20260714-030523.json  health-20260714-031533.json  health-20260714-032543.json  health-20260714-033553.json  health-20260714-034603.json  health-20260714-035613.json  health-20260714-040622.json  health-20260714-041630.json  health-20260714-042639.json  health-20260714-043648.json  health-20260714-044657.json  health-20260714-045706.json  health-20260714-050715.json  health-20260714-051724.json  health-20260714-052733.json  health-20260714-053743.json  health-20260714-054752.json  health-20260714-055802.json  health-20260714-060811.json  health-20260714-061821.json  health-20260714-062830.json  health-20260714-063840.json  health-20260714-064849.json  health-20260714-065859.json  health-20260714-070909.json  health-20260714-071919.json  health-20260714-072929.json  health-20260714-073939.json  health-20260714-074949.json  health-20260714-075959.json  (+450 more)
.devcontainer/: devcontainer.json
deploy/: .env.example  BACKUP_SETUP.md  CLOUD_ORACLE.md  CODESPACES.md  Caddyfile  DEBUGGING.md  IN_BED_CALIBRATION.md  IPHONE_SENSOR.md  LIVE_POD.md  Makefile  README.md  REMOTE_ACCESS.md  VERIFY_LIVE_POD.md  VERITY_SENSOR.md  WINDOWS_HOME_SERVER.md  docker-compose.cloud.yml  docker-compose.yml  tunnel.sh
docs/: ALTERNATIVE_SENSORS.md  ARCHITECTURE_STEERING.md  AWAKENING_PREVENTION.md  CLAUDE_REMOTE_OPS.md  CONTROL_LAW.md  DASHBOARD.md  DIAGNOSTICS_CLI.md  MAINTENANCE_STRATEGY.md  PASSIVE_CAPTURE.md  SELF_LEARNING.md  SHORT_SLEEP.md  SLEEP_DEPRIVATION.md  THERMAL_LATENCY.md  THERMAL_WATER_LOOP_DEBUGGING.md  TIER1_RAW_CAPTURE.md  WAKE_SCIENCE.md
scripts/: backup-encrypted.ps1  cloud-setup.sh  codespace-up.sh  collect-diagnostics.ps1  doctor.ps1  in_bed_calibration.py  publish-health.ps1  validate_env.ps1  verify_live_pod.py  verity_forwarder.py  windows-always-on.ps1  windows-bootstrap.ps1  windows-dashboard.ps1  (+2 more)
(+294 files in other folders)
