[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "sleepctl"
version = "0.1.0"
description = "Closed-loop sleep-optimization controller for Eight Sleep Pod 2"
requires-python = ">=3.11"
dependencies = ["PyYAML"]

[project.optional-dependencies]
# Runtime deps for the async lukas-clarke pyEight fork. NOTE: that fork ships no
# setup.py/pyproject, so it is not pip-installable directly — obtain the `pyeight`
# package via git clone + PYTHONPATH (see README "Live run"). These extras provide the
# libraries it imports.
eightsleep = ["aiohttp>=3.8.0", "httpx>=0.24.0", "python-dateutil>=2.8.0"]
google = ["google-api-python-client", "google-auth-oauthlib"]
dev = ["pytest"]

[project.scripts]
sleepctl = "sleepctl.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["sleepctl*"]
